# projetcplusplus

./: CMakeLists.txt  Player.cpp  Player.h  Sprite_manager.cpp  Sprite_manager.h  Sprite_pos.cpp  Sprite_pos.h  enemystats.h  functions.cpp  functions.h  main.cpp  playerstats.h  readme.txt
